--- a/Interor/products.html
+++ b/Interor/products.html
@@ -17,7 +17,7 @@
                     <li class="menu-list"><a href="products.html" class="menu-link-active">PRODUCT</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">HISTORY</a></li>
                     <li class="menu-list"><a href="#" class="menu-link">SHOWROOM</a></li>
-                    <li class="menu-list"><a href="#" class="menu-link">CONTACT</a></li>
+                    <li class="menu-list"><a href="contacts.html" class="menu-link">CONTACT</a></li>
                     <li class="menu-list"><a href="#" class="menu-link"><img src="img/search.svg" alt="search"></a></li>
                 </ul>
             </div>
